0.4.4:
Sam Lantinga - Fri Apr 27 10:15:37 PDT 2001
 * plaympeg now shows the name of the MPEG file in the caption
Sam Lantinga - Wed Apr 18 17:07:40 PDT 2001
 * Added a check for the socklen_t type (thanks Michael Pruett)
Sam Lantinga - Mon Apr 16 14:20:07 PDT 2001
 * Fixed crash with incorrectly encoded macroblock sequences
Mo DeJong - Mon Apr 16 12:26:04 PDT 2001
 * Fixed crash when the MPEG file can't be opened
Joe Drew - Mon Apr 16 12:04:36 PDT 2001
 * Fixed crash in gtv when seeking without a file loaded

0.4.3:
Sam Lantinga - Thu Apr  5 01:09:43 PDT 2001
 * Updated for Simple DirectMedia Layer version 1.2.0
Sam Lantinga - Wed Apr  4 17:18:22 PDT 2001
 * Fixed crash in gtv when doubling the video on Windows
Sam Lantinga - Wed Apr  4 17:18:14 PDT 2001
 * Fixed audio stream detection in non-standard MPEG streams
Sam Lantinga - Wed Apr  4 16:42:53 PDT 2001
 * Fixed hang on rewind when stream header contains no timestamp
Andreas Kloeckner - Wed Apr  4 14:43:49 PDT 2001
 * SMPEG now uses the SDL_RWops file abstraction internally
Joe Drew - Wed Apr  4 13:40:44 PDT 2001
 * Fixed bug where the audio was not updating the current time
Michel Darricau - Wed Apr  4 13:31:40 PDT 2001
 * Added some changes for the popcorn MPEG library
Nicolas Vignal - Wed Apr  4 13:25:28 PDT 2001
 * Added smpeg.m4
Sam Lantinga - Wed Feb 21 16:24:46 PST 2001
 * SDL 1.2.0 supports 24 bpp displays, allow that in plaympeg
Sam Lantinga - Fri Feb  9 23:37:31 PST 2001
 * Ported to MacOS X - one line fix.  I love portable code! :)
   It's still unusably slow, but it works! :)
Sam Lantinga - Thu Feb  8 17:33:15 PST 2001
 * Fixed a hang playing invalid MPEG files
Matt Carlson - Fri Feb  2 18:13:08 PST 2001
 * Fixed memory leak when used with OpenAL
Sam Lantinga - Mon Jan  8 07:49:20 PST 2001
 * Return a non-zero status from plaympeg if playback fails
James Boucher - Mon Jan  8 06:53:31 PST 2001
 * Changes to compile correctly on QNX RTP
Sam Lantinga - Thu Dec 21 10:52:28 PST 2000